[workspace]
members = [
    "fibonacci",
]
[package]
name = "zkm2-groth16"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
bincode = "1.3.3"
ark-bn254 = { version = "0.5" }
ark-groth16 = { version = "0.5" }
lazy_static = { version = "1.5.0", default-features = false }

# zkm2-build = { git = "https://github.com/zkMIPS/zkm2.git", branch = "dev/init" }
zkm2-build = { path = "../zkm2/crates/build" }
zkm2-core-machine = { path = "../zkm2/crates/core/machine" }
zkm2-prover = { path = "../zkm2/crates/prover" }
zkm2-sdk = { path = "../zkm2/crates/sdk" }
zkm2-verifier = { path = "../zkm2/crates/verifier", features = ["ark"] }

[build-dependencies]
zkm2-build = { path = "../zkm2/crates/build" }
